Fixed Circle dis-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ padding: 2em 0em;
 .timeline .experience .circle {
     position: absolute;
     top: 1em;
-    left: -0.86em;
+    left: -0.65em;
     display: block;
     width: 1.222em;
     height: 1.222em;
